<resources>
    <string name="app_name">CityOfAnimation</string>
    <string name="main_activity_frame_animation">FrameAnimation</string>
    <string name="main_activity_tween_animation">TweenAnimation</string>
    <string name="main_activity_blur">Blur</string>
    <string name="main_activity_transition">Activity Transition</string>
    <string name="main_activity_view_pager">ViewPagerAnimation</string>
    <string name="main_activity_property_animation">PropertyAnimation</string>
    <string name="style1_view_pager_activity">Style1</string>
    <string name="style2_view_pager_activity">Style2</string>
    <string name="style3_view_pager_activity">Style3</string>
    <string name="style4_view_pager_activity">Style4</string>
    <string name="style5_view_pager_activity">Style5</string>
    <string name="style6_view_pager_activity">Style6</string>
    <string name="start">开始</string>
    <string name="stop">停止</string>
    <string name="line_style1_value_animator_activity">Line</string>
    <string name="line_style2_value_animator_activity">Line_Color</string>
    <string name="line_style3_value_animator_activity">Line_Sin</string>
</resources>
