<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/main_activity_frame_animation_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/main_activity_frame_animation" />

    <Button
        android:id="@+id/main_activity_tween_animation_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/main_activity_tween_animation" />

    <Button
        android:id="@+id/main_activity_blur_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/main_activity_blur" />

    <Button
        android:id="@+id/main_activity_transition_activity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/main_activity_transition" />

    <Button
        android:id="@+id/main_activity_view_pager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_activity_view_pager" />

</LinearLayout>
